--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -95,7 +95,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_LUCI_LANG_zh_Hans=y
-CONFIG_PACKAGE_luci-app-samba4=m
+#CONFIG_PACKAGE_luci-app-samba4=m
 CONFIG_PACKAGE_luci-light=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
