--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,13 @@ jobs:
           git apply --ignore-space-change re-cs-03-nss.patch
 
       - name: Update and install feeds
-        run: ./scripts/feeds update -a && ./scripts/feeds install -a
+        run: |
+          ./scripts/feeds update -a && ./scripts/feeds install -a
+          git clone https://github.com/xiaorouji/openwrt-passwall2.git package/utils/passwall2
+          git clone https://github.com/jerrykuku/luci-theme-argon.git package/feeds/luci/luci-theme-argon
+          git clone https://github.com/jerrykuku/luci-app-argon-config.git package/feeds/luci/luci-app-argon-config
+          git clone https://github.com/dgyangxf/luci-app-vlmcsd.git package/feeds/luci/luci-app-vlmcsd
+          git clone https://github.com/im-0/openwrt-package.vlmcsd.git package/utils/vlmcsd
 
       - name: Setup configuration and custom files
         run: |
