--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -121,6 +121,7 @@ CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-passwall2=y
+CONFIG_PACKAGE_luci-app-qbittorrent==y
 
 ## Redundant Default Packages
 CONFIG_PACKAGE_kmod-phy-aquantia=n
