--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,6 +91,7 @@ jobs:
           git clone https://github.com/jerrykuku/luci-app-argon-config.git package/feeds/luci/luci-app-argon-config
           git clone https://github.com/dgyangxf/luci-app-vlmcsd.git package/feeds/luci/luci-app-vlmcsd
           git clone https://github.com/im-0/openwrt-package.vlmcsd.git package/utils/vlmcsd
+          git clone https://github.com/sbwml/openwrt-qBittorrent package/feeds/qBittorrent
 
       - name: Setup configuration and custom files
         run: |
