--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,13 +85,8 @@ jobs:
 
       - name: Update and install feeds
         run: |
+          echo 'src-git custom https://github.com/kiddin9/kwrt-packages' >> feeds.conf.default
           ./scripts/feeds update -a && ./scripts/feeds install -a
-          git clone https://github.com/xiaorouji/openwrt-passwall2.git package/utils/passwall2
-          git clone https://github.com/jerrykuku/luci-theme-argon.git package/feeds/luci/luci-theme-argon
-          git clone https://github.com/jerrykuku/luci-app-argon-config.git package/feeds/luci/luci-app-argon-config
-          git clone https://github.com/dgyangxf/luci-app-vlmcsd.git package/feeds/luci/luci-app-vlmcsd
-          git clone https://github.com/im-0/openwrt-package.vlmcsd.git package/utils/vlmcsd
-          git clone https://github.com/sbwml/openwrt-qBittorrent package/feeds/qBittorrent
 
       - name: Setup configuration and custom files
         run: |
