--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -65,6 +65,10 @@ CONFIG_PACKAGE_dropbear=n
 CONFIG_PACKAGE_openssh-moduli=y
 CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_openssh-client=y
+CONFIG_PACKAGE_openssh-sftp-client=y
+CONFIG_PACKAGE_openssh-keygen=y
+CONFIG_PACKAGE_openssh-server-pam=y
 
 ## WiFi Firmware & Ucode Scripts
 CONFIG_WIFI_SCRIPTS_UCODE=y
@@ -122,7 +126,21 @@ CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-passwall2=y
 CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Client=n
+CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_SingBox=n
+CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=n
 CONFIG_PACKAGE_luci-app-qbittorrent==y
+
+CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_FILE=y
+CONFIG_LIBCURL_FTP=y
+CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_HTTP2=y
+CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_OPENSSL=y
+CONFIG_LIBCURL_PROXY=y
+CONFIG_LIBCURL_UNIX_SOCKETS=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_libcurl=y
 
 ## Redundant Default Packages
 CONFIG_PACKAGE_kmod-phy-aquantia=n
