Add caching step in build workflow
Added caching step to the build workflow for improved performance.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: "builder_repo"
-
+          
+      - name: cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            build_dir
+            dl
+            feeds
+            staging_dir
+            tmp
+          
       - name: Add custom patches
         run: |
           if [ -d "builder_repo/patches" ] && [ "$(ls -A builder_repo/patches 2>/dev/null)" ]; then
