--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -119,7 +119,7 @@ jobs:
           make download -j$(nproc) V=s
           make check -j$(nproc) FIXUP=1 V=s
           make -j$(nproc) || make -j1 V=s  # Retry single-threaded on failure
-          tar -C bin/targets/qualcommax/ipq50xx cvzf packages.tar.gz packages
+          tar cvzf bin/targets/qualcommax/ipq50xx/packages.tar.gz -C bin/targets/qualcommax/ipq50xx packages
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
