--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -130,6 +130,27 @@ CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_SingBox=n
 CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=n
 CONFIG_PACKAGE_luci-app-qbittorrent==y
 
+CONFIG_PACKAGE_luci-app-aria2=m
+CONFIG_PACKAGE_luci-app-transmission=m
+CONFIG_PACKAGE_luci-app-adblock-fast=m
+CONFIG_PACKAGE_diffutils=m
+CONFIG_PACKAGE_file=m
+CONFIG_PACKAGE_rclone=m
+CONFIG_PACKAGE_sing-box=m
+
+CONFIG_PACKAGE_kmod-fuse=m
+CONFIG_PACKAGE_kmod-fs-cifs=m
+CONFIG_PACKAGE_kmod-fs-ksmbd=m
+CONFIG_PACKAGE_kmod-fs-vfat=m
+CONFIG_PACKAGE_kmod-nft-arp=m
+CONFIG_PACKAGE_kmod-nft-bridge=m
+CONFIG_PACKAGE_kmod-nft-compat=m
+CONFIG_PACKAGE_kmod-nft-connlimit=m
+CONFIG_PACKAGE_kmod-nft-dup-inet=m
+CONFIG_PACKAGE_kmod-nft-netdev=m
+CONFIG_PACKAGE_kmod-nft-queue=m
+CONFIG_PACKAGE_kmod-nft-xfrm=m
+
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -160,3 +181,4 @@ CONFIG_ATH11K_THERMAL=n
 ## Prevent Custom Feeds
 CONFIG_FEED_nss=n
 CONFIG_FEED_sqm_scripts_nss=n
+
