--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget && sudo apt full-upgrade -y
+        run: sudo apt update && sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
       - name: Checkout remote repository
         uses: actions/checkout@v4
         with:
@@ -78,6 +78,7 @@ jobs:
           
       - name: Add custom patches
         run: |
+          df -h
           if [ -d "builder_repo/patches" ] && [ "$(ls -A builder_repo/patches 2>/dev/null)" ]; then
             mv builder_repo/patches/* ./
             for patch in *.patch; do
@@ -90,13 +91,15 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           PAT_TOKEN: ${{ secrets.FETCH }}
         run: |
+          df -h
           #gh api -H "Accept: application/vnd.github.raw+json" /repos/pmyy-wt/jdcloud_re-cs-03/contents/re-cs-03-nss.patch --jq '.content' -F ref=main | base64 --decode > re-cs-03-nss.patch
           curl -H "Authorization: token ${PAT_TOKEN}" -OL "https://raw.githubusercontent.com/pmyy-wt/jdcloud_re-cs-03/refs/heads/main/re-cs-03-nss.patch"
           ls -al re-cs-03-nss.patch && sha256sum re-cs-03-nss.patch
-          git apply --ignore-space-change re-cs-03-nss.patch
+          git apply --verbose --ignore-space-change re-cs-03-nss.patch
 
       - name: Update and install feeds
         run: |
+          df -h
           #echo 'src-git custom https://github.com/kiddin9/kwrt-packages' >> feeds.conf.default
           ./scripts/feeds update -a && ./scripts/feeds install -a
           #git clone https://github.com/xiaorouji/openwrt-passwall2.git package/feeds/luci/luci-app-passwall2
@@ -109,17 +112,24 @@ jobs:
 
       - name: Setup configuration and custom files
         run: |
+          df -h
           mv builder_repo/${{ env.CONFIG_FILE }} .config
           make defconfig -j$(nproc)
           mkdir -p ${{ env.CUSTOM_FILES_PATH }}
           [ -d "builder_repo/${{ env.CUSTOM_FILES_PATH }}" ] && mv builder_repo/${{ env.CUSTOM_FILES_PATH }}* ${{ env.CUSTOM_FILES_PATH }} || true
 
+      - name: Download packages
+        run: |
+          df -h
+          make download -j$(nproc)
+          
       - name: Build firmware
         run: |
-          make download -j$(nproc) V=s
+          df -h
           make check -j$(nproc) FIXUP=1 V=s
           make -j$(nproc) || make -j1 V=s  # Retry single-threaded on failure
           tar cvzf bin/targets/qualcommax/ipq50xx/packages.tar.gz -C bin/targets/qualcommax/ipq50xx packages
+          tar cvzf bin/targets/qualcommax/ipq50xx/aarch64_cortex-a53.tar.gz -C bin/packages/aarch64_cortex-a53 .
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -175,6 +185,7 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          df -h
           gh api repos/${{ github.repository }}/releases --paginate --jq '.[5:] | .[] | "\(.id) \(.tag_name)"' | while read id tag; do
             gh api -X DELETE "repos/${{ github.repository }}/releases/$id" && gh api -X DELETE "repos/${{ github.repository }}/git/refs/tags/$tag" 2>/dev/null || true
           done
