--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -136,20 +136,20 @@ CONFIG_PACKAGE_luci-app-adblock-fast=m
 CONFIG_PACKAGE_diffutils=m
 CONFIG_PACKAGE_file=m
 CONFIG_PACKAGE_rclone=m
-CONFIG_PACKAGE_sing-box=m
+#CONFIG_PACKAGE_sing-box=m
 
 CONFIG_PACKAGE_kmod-fuse=m
 CONFIG_PACKAGE_kmod-fs-cifs=m
 CONFIG_PACKAGE_kmod-fs-ksmbd=m
 CONFIG_PACKAGE_kmod-fs-vfat=m
-CONFIG_PACKAGE_kmod-nft-arp=m
-CONFIG_PACKAGE_kmod-nft-bridge=m
-CONFIG_PACKAGE_kmod-nft-compat=m
-CONFIG_PACKAGE_kmod-nft-connlimit=m
-CONFIG_PACKAGE_kmod-nft-dup-inet=m
-CONFIG_PACKAGE_kmod-nft-netdev=m
-CONFIG_PACKAGE_kmod-nft-queue=m
-CONFIG_PACKAGE_kmod-nft-xfrm=m
+#CONFIG_PACKAGE_kmod-nft-arp=m
+#CONFIG_PACKAGE_kmod-nft-bridge=m
+#CONFIG_PACKAGE_kmod-nft-compat=m
+#CONFIG_PACKAGE_kmod-nft-connlimit=m
+#CONFIG_PACKAGE_kmod-nft-dup-inet=m
+#CONFIG_PACKAGE_kmod-nft-netdev=m
+#CONFIG_PACKAGE_kmod-nft-queue=m
+#CONFIG_PACKAGE_kmod-nft-xfrm=m
 
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
