Link build_dir to /mnt and check disk space
Added step to link build_dir to /mnt and check disk space usage.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,6 +85,12 @@ jobs:
           curl -H "Authorization: token ${PAT_TOKEN}" -OL "https://raw.githubusercontent.com/pmyy-wt/jdcloud_re-cs-03/refs/heads/main/re-cs-03-nss.patch"
           ls -al re-cs-03-nss.patch && sha256sum re-cs-03-nss.patch
           git apply --verbose --ignore-space-change re-cs-03-nss.patch
+          
+      - name: Link build_dir to /mnt
+        run: |
+          df -h
+          sudo mkdir -p /mnt/build_dir && sudo chmod 777 /mnt/build_dir
+          ln -s /mnt/build_dir build_dir && ls -al build_dir
 
       - name: cache
         uses: actions/cache@v4
@@ -140,6 +146,9 @@ jobs:
           name: ipq50xx-images
           path: bin/targets/qualcommax/ipq50xx
 
+      - name: Check disk space usage
+        run: df -h
+        
   release:
     name: Create release
     needs: [check_commits, build]
