Add unzipping of luci-app-accesscontrol package
Unzip luci-app-accesscontrol.zip into the package directory.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -98,6 +98,7 @@ jobs:
           #git clone https://github.com/dgyangxf/luci-app-vlmcsd.git package/feeds/luci/luci-app-vlmcsd
           #git clone https://github.com/im-0/openwrt-package.vlmcsd.git package/utils/vlmcsd
           #git clone https://github.com/sbwml/openwrt-qBittorrent package/feeds/qBittorrent
+          unzip builder_repo/luci-app-accesscontrol.zip -d package/feeds/luci
 
       - name: Setup configuration and custom files
         run: |
