--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -98,6 +98,16 @@ CONFIG_PACKAGE_luci-app-banip=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
+CONFIG_PACKAGE_diffutils=y
+CONFIG_PACKAGE_file=y
+CONFIG_PACKAGE_acme-acmesh-dnsapi=y
+CONFIG_PACKAGE_procps-ng-watch=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq=n
 CONFIG_LUCI_LANG_zh_Hans=y
 #CONFIG_PACKAGE_luci-app-samba4=m
 CONFIG_PACKAGE_luci-light=y
@@ -129,6 +139,20 @@ CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Client=n
 CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_SingBox=n
 CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=n
 CONFIG_PACKAGE_luci-app-qbittorrent==y
+CONFIG_PACKAGE_luci-app-transmission=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-adblock-fast=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-package-manager=y
+CONFIG_PACKAGE_px5g-mbedtls=y
+CONFIG_PACKAGE_rpcd=y
+CONFIG_PACKAGE_rpcd-mod-file=y
+CONFIG_PACKAGE_rpcd-mod-iwinfo=y
+CONFIG_PACKAGE_rpcd-mod-luci=y
+CONFIG_PACKAGE_rpcd-mod-rrdns=y
+CONFIG_PACKAGE_rpcd-mod-ucode=y
+CONFIG_PACKAGE_ucode-mod-html=y
+CONFIG_PACKAGE_ucode-mod-math=y
 
 CONFIG_PACKAGE_kmod-fuse=m
 CONFIG_PACKAGE_kmod-fs-cifs=m
