--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -10,6 +10,7 @@ CONFIG_TARGET_qualcommax_ipq50xx_DEVICE_jdcloud_re-cs-03=y
 CONFIG_ATH11K_MEM_PROFILE_512M=y
 CONFIG_IPQ_MEM_PROFILE_512=y
 CONFIG_KERNEL_IPQ_MEM_PROFILE=512
+CONFIG_USE_MKLIBS=n
 
 ## Essential NSS Configuration
 CONFIG_ATH11K_NSS_SUPPORT=y
