--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -116,6 +116,7 @@ jobs:
 
       - name: Restore cache from previous build
         uses: actions/cache@v4
+        if: always()
         with:
           key: openwrt-build-${{ needs.check_commits.outputs.latest_commit_sha }}
           restore-keys: |
