Update cron schedule and fix sed command syntax

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
   #push:
   schedule:
-    - cron: "0 */3 * * *"
+    - cron: "0 2/3 * * *"
 
 env:
   REMOTE_REPOSITORY: openwrt/openwrt
@@ -91,7 +91,7 @@ jobs:
           df -h
           #echo 'src-git custom https://github.com/kiddin9/kwrt-packages' >> feeds.conf.default
           ./scripts/feeds update -a && ./scripts/feeds install -a -p luci && ./scripts/feeds install -a -p packages
-          sed -e '/CMAKE_INSTALL/a\\nCMAKE_OPTIONS += -DCMAKE_POLICY_VERSION_MINIMUM=3.5' package/feeds/packages/libnatpmp/Makefile
+          sed -i -e '/CMAKE_INSTALL/a\\nCMAKE_OPTIONS += -DCMAKE_POLICY_VERSION_MINIMUM=3.5' package/feeds/packages/libnatpmp/Makefile
           #git clone https://github.com/xiaorouji/openwrt-passwall2.git package/feeds/luci/luci-app-passwall2
           #git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/utils/passwall2
           git clone https://github.com/jerrykuku/luci-theme-argon.git package/feeds/luci/luci-theme-argon
