--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -200,6 +200,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh api repos/${{ github.repository }}/actions/caches --paginate --jq '.actions_caches[1:] | .[] |.key' | while read key; do
+            echo "Removing old cache $key ..."
             gh api -X DELETE "/repos/${{ github.repository }}/actions/caches?key=$key" 2>/dev/null || true
           done
 
@@ -209,5 +210,6 @@ jobs:
         run: |
           df -h
           gh api repos/${{ github.repository }}/releases --paginate --jq '.[5:] | .[] | "\(.id) \(.tag_name)"' | while read id tag; do
+            echo "Removing old release $key ..."
             gh api -X DELETE "repos/${{ github.repository }}/releases/$id" && gh api -X DELETE "repos/${{ github.repository }}/git/refs/tags/$tag" 2>/dev/null || true
           done
