--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -197,3 +197,6 @@ CONFIG_ATH11K_THERMAL=n
 ## Prevent Custom Feeds
 CONFIG_FEED_nss=n
 CONFIG_FEED_sqm_scripts_nss=n
+
+## Build all kmod
+CONFIG_ALL_KMODS=y
