--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -200,3 +200,14 @@ CONFIG_FEED_sqm_scripts_nss=n
 
 ## Build all kmod
 CONFIG_ALL_KMODS=y
+CONFIG_PACKAGE_kmod-rtl8189es=n
+CONFIG_PACKAGE_kmod-rtl8192ce=n
+CONFIG_PACKAGE_kmod-rtl8192cu=n
+CONFIG_PACKAGE_kmod-rtl8192de=n
+CONFIG_PACKAGE_kmod-rtl8192du=n
+CONFIG_PACKAGE_kmod-rtl8192se=n
+CONFIG_PACKAGE_kmod-rtl8723be=n
+CONFIG_PACKAGE_kmod-rtl8723bs=n
+CONFIG_PACKAGE_kmod-rtl8812au-ct=n
+CONFIG_PACKAGE_kmod-rtl8821ae=n
+CONFIG_PACKAGE_kmod-rtl8xxxu=n
