Remove multiple MT76 and MT79 kernel module configurations

--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -211,3 +211,33 @@ CONFIG_PACKAGE_kmod-rtl8723bs=n
 CONFIG_PACKAGE_kmod-rtl8812au-ct=n
 CONFIG_PACKAGE_kmod-rtl8821ae=n
 CONFIG_PACKAGE_kmod-rtl8xxxu=n
+CONFIG_PACKAGE_kmod-mt76=n
+CONFIG_PACKAGE_kmod-mt7601u=n
+CONFIG_PACKAGE_kmod-mt7603=n
+CONFIG_PACKAGE_kmod-mt7615-firmware=n
+CONFIG_PACKAGE_kmod-mt7615e=n
+CONFIG_PACKAGE_kmod-mt7622-firmware=n
+CONFIG_PACKAGE_kmod-mt7663-firmware-ap=n
+CONFIG_PACKAGE_kmod-mt7663-firmware-sta=n
+CONFIG_PACKAGE_kmod-mt7663s=n
+CONFIG_PACKAGE_kmod-mt7663u=n
+CONFIG_PACKAGE_kmod-mt76x0e=n
+CONFIG_PACKAGE_kmod-mt76x0u=n
+CONFIG_PACKAGE_kmod-mt76x2=n
+CONFIG_PACKAGE_kmod-mt76x2u=n
+CONFIG_PACKAGE_kmod-mt7915-firmware=n
+CONFIG_PACKAGE_kmod-mt7915e=n
+CONFIG_PACKAGE_kmod-mt7916-firmware=n
+CONFIG_PACKAGE_kmod-mt7921-firmware=n
+CONFIG_PACKAGE_kmod-mt7921e=n
+CONFIG_PACKAGE_kmod-mt7921s=n
+CONFIG_PACKAGE_kmod-mt7921u=n
+CONFIG_PACKAGE_kmod-mt7922-firmware=n
+CONFIG_PACKAGE_kmod-mt7925-firmware=n
+CONFIG_PACKAGE_kmod-mt7925e=n
+CONFIG_PACKAGE_kmod-mt7925u=n
+CONFIG_PACKAGE_kmod-mt7992-23-firmware=n
+CONFIG_PACKAGE_kmod-mt7992-firmware=n
+CONFIG_PACKAGE_kmod-mt7996-233-firmware=n
+CONFIG_PACKAGE_kmod-mt7996-firmware=n
+CONFIG_PACKAGE_kmod-mt7996e=n
