--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -36,7 +36,7 @@ CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=n
 
 ## Compiler and Toolchain Optimization
 CONFIG_BINUTILS_USE_VERSION_2_43=y
-CONFIG_DEVEL=y
+CONFIG_DEVEL=yf
 CONFIG_GCC_USE_GRAPHITE=y
 CONFIG_GCC_USE_VERSION_15=y
 CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
@@ -239,3 +239,22 @@ CONFIG_PACKAGE_kmod-mt7992-firmware=n
 CONFIG_PACKAGE_kmod-mt7996-233-firmware=n
 CONFIG_PACKAGE_kmod-mt7996-firmware=n
 CONFIG_PACKAGE_kmod-mt7996e=n
+
+
+
+# 添加iptables-nft
+CONFIG_PACKAGE_kmod-nf-conntrack6=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+
+
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_firewall4=y
+
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-conntrack=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-nat=y
