--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -189,7 +189,7 @@ CONFIG_FEED_nss=n
 CONFIG_FEED_sqm_scripts_nss=n
 
 ## Build all kmod
-CONFIG_ALL_KMODS=y
+CONFIG_ALL_KMODS=n
 CONFIG_PACKAGE_kmod-rtl8189es=n
 CONFIG_PACKAGE_kmod-rtl8192ce=n
 CONFIG_PACKAGE_kmod-rtl8192cu=n
