--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ env:
 jobs:
   check_commits:
     name: Check for new commits
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     outputs:
       new_commits: ${{ steps.check_commits.outputs.new_commits }}
       latest_commit_sha: ${{ steps.check_commits.outputs.latest_commit_sha }}
@@ -50,7 +50,7 @@ jobs:
     name: Build OpenWrt
     needs: check_commits
     if: github.event_name == 'workflow_dispatch' || needs.check_commits.outputs.new_commits == 'true' || needs.check_commits.outputs.nss_packages_repo_new_commits == 'true'
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     steps:
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
@@ -146,7 +146,7 @@ jobs:
     name: Create release
     needs: [check_commits, build]
     if: needs.build.result == 'success'
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
