--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -250,3 +250,26 @@ CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-nft-socket 
+CONFIG_PACKAGE_kmod-nft-tproxy
+CONFIG_PACKAGE_kmod-inet-diag=y
+CONFIG_PACKAGE_kmod-netlink-diag=y
+CONFIG_PACKAGE_kmod-tun=y
+
+#mount
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y     # NTFS（新内核推荐）
+CONFIG_PACKAGE_ntfs3-mount=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_exfat-mount=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_luci-app-mount=y
+
