--- a/re-cs-03.config
+++ b/re-cs-03.config
@@ -278,3 +278,4 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_automount=y
 
+CONFIG_PACKAGE_iptables-nft=y
