--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,8 @@ permissions:
 on:
   workflow_dispatch:
   #push:
-  schedule:
-    - cron: "0 2/3 * * *"
+  #schedule:
+  #  - cron: "0 2/3 * * *"
 
 env:
   REMOTE_REPOSITORY: openwrt/openwrt
